Fix footer inline-block whitespace (adds vertical align)

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -7,6 +7,8 @@
   font-weight: 300;
   margin-top: 100px;
   display: inline-block;
+  vertical-align:top;
+  width: 100%;
   & a {
     color: #999;
     &:hover {
